appId: com.axonic
---
- launchApp:
    stopApp: false
- runFlow:
    when:
      visible: http://10.0.2.2:8081
    commands:
      - tapOn: http://10.0.2.2:8081
- extendedWaitUntil:
    visible:
      id: axonic-(ready|message-composer)
    timeout: 120000
- assertVisible:
    id: axonic-(ready|message-composer)
